--- a/style.css
+++ b/style.css
@@ -17,12 +17,11 @@ thead {
 }
 
 .button {
-  padding: 1rem;
+  padding: 0.8rem;
   border-radius: 8px;
   opacity: 0.6;
-  margin: 0 0.5rem;
-  font-size: 1.2rem;
-  min-width: 93px;
+  font-size: 0.8rem;
+  min-width: 80px;
 }
 
 .green {
@@ -35,7 +34,7 @@ thead {
   color: white;
 }
 
-button:hover {
+.button:hover {
   opacity: 1;
 }
 
@@ -43,9 +42,21 @@ td {
   padding: 5px;
 }
 
+.left {
+  width: 300px;
+}
+
 .flex {
   display: flex;
   justify-content: space-around;
+}
+
+.space-around {
+  justify-content: space-around;
+}
+
+.space-between {
+  justify-content: space-between;
 }
 
 .flex-col {
@@ -54,7 +65,7 @@ td {
 }
 
 .padding {
-  padding: 2rem;
+  padding: 1rem;
 }
 
 .margin-bottom {
