--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Courier New', Courier, monospace;
+}
+
 #canvas-radius {
   width: 200px;
   height: 200px;
@@ -6,6 +10,20 @@
 #canvas-main {
   width: 1000px;
   height: 1000px;
+  z-index: 10;
+}
+
+#iterations {
+  font-size: 76px;
+}
+
+.iterations-section {
+  font-weight: 0;
+  font-size: 20px;
+}
+
+body {
+  background-color: black;
 }
 
 table {
@@ -16,22 +34,40 @@ thead {
   font-weight: bold;
 }
 
+.button-bar {
+  display: flex;
+  justify-content: center;
+}
+
 .button {
+  border: none;
+  color: black;
+  cursor: pointer;
   padding: 0.8rem;
-  border-radius: 8px;
-  opacity: 0.6;
-  font-size: 0.8rem;
-  min-width: 80px;
+  border-radius: 75px;
+  font-size: 1.2rem;
+  min-width: 100px;
+  min-height: 100px;
+  transition: all 0.2s ease-in-out;
 }
 
-.green {
-  background-color: green;
+.start {
+  background-color: white;
+  box-shadow: 2px 2px #bcb6ff;
+}
+
+.reset {
+  background-color: #ea7317;
+  box-shadow: 2px 2px white;
+}
+
+.white {
   color: white;
 }
 
-.red {
-  background-color: red;
-  color: white;
+.button:active {
+  box-shadow: none;
+  transform: translate(4px, 4px);
 }
 
 .button:hover {
@@ -78,4 +114,8 @@ td {
 
 .big-font {
   font-size: 1.5rem;
+}
+
+.hidden {
+  display: none;
 }
