--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 }
 
 #iterations {
+  color: white;
   font-size: 76px;
 }
 
@@ -48,30 +49,31 @@ thead {
 
 .button-bar {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  flex-direction: row-reverse;
 }
 
 .button {
+  background-color: black;
   border: none;
-  color: black;
+  color: white;
   cursor: pointer;
   padding: 0.8rem;
-  border-radius: 75px;
-  font-size: 1.2rem;
-  min-width: 100px;
-  min-height: 100px;
+  border-radius: 5px;
+  font-size: 3rem;
+  min-width: 80px;
+  min-height: 80px;
   transition: all 0.2s ease-in-out;
 }
 
-.start {
-  background-color: white;
-  box-shadow: 2px 2px #bcb6ff;
-}
+/* .start {
+  background-color: black;
+  /* box-shadow: 2px 2px grey; */
+*/
 
-.reset {
-  background-color: #ea7317;
-  box-shadow: 2px 2px white;
-}
+/* .reset {
+  box-shadow: 2px 2px red;
+} */
 
 .white {
   color: white;
@@ -133,6 +135,7 @@ td {
 }
 
 .small-square {
+  border: 1px solid white;
   border-radius: 5px;
   width: 25px;
   height: 25px;
