--- a/style.css
+++ b/style.css
@@ -69,16 +69,8 @@ td {
 /* button menu */
 /*             */
 #button-menu {
-  display: flex;
-  justify-content: center;
+  margin-left: 1rem;
   width: 33%;
-}
-
-.button-bar {
-  width: 33%;
-  display: flex;
-  flex-direction: column;
-  flex-direction: row-reverse;
 }
 
 .button {
@@ -94,6 +86,11 @@ td {
 .button:hover {
   color: lightblue;
   border: 1px solid lightblue;
+}
+
+.start-button {
+  padding-top: 0.7rem;
+  padding-left: 0.7rem;
 }
 
 #iterations-section {
