--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
   background-color: black;
   margin: 0;
   font-family: 'Courier New', Courier, monospace;
-  /* height: 100%; */
+  display: flex;
+  justify-content: center;
 }
 
 thead {
@@ -21,27 +22,26 @@ td {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  max-width: 699px;
 }
 
 /* canvas panel */
 /*              */
 #canvas-section {
-  width: 350px;
-  height: 350px;
+  width: 100%;
 }
 
 #canvas-main {
-  width: 350px;
-  height: 350px;
-  border-radius: 0 0 5px 5px;
+  width: 100%;
+  height: 100%;
 }
 
 /* display panel */
 /*               */
 #display-panel-section {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   width: 100%;
 }
 
@@ -69,29 +69,32 @@ td {
 /* button menu */
 /*             */
 #button-menu {
-  margin-left: 1rem;
-  width: 33%;
+  /* margin-left: 1rem; */
+  width: 100%;
+  text-align: center;
+  min-height: 45px;
 }
 
 .button {
+  font-family: 'Courier New', Courier, monospace;
   background-color: black;
   border: none;
   color: white;
   cursor: pointer;
-  /* padding: 0.8rem; */
-  font-size: 3.2rem;
+  font-size: 2.2rem;
   transition: all 0.3s ease-in-out;
+  border-radius: 5px;
 }
 
 .button:hover {
-  color: lightblue;
-  border: 1px solid lightblue;
+  background-color: lightblue;
+  color: black;
 }
 
-.start-button {
+/* .start-button {
   padding-top: 0.7rem;
   padding-left: 0.7rem;
-}
+} */
 
 #iterations-section {
   width: 33%;
@@ -113,6 +116,7 @@ td {
 }
 
 #colors-section {
+  display: none;
   width: 33%;
 }
 /*                          */
@@ -162,10 +166,69 @@ td {
 .hidden {
   display: none;
 }
-
-/* @media only screen and (min-width: 200px) {
-  body {
-    background-color: aqua;
-    width: 300px;
+/* 
+@media only screen and (min-width: 401px) {
+  #canvas-section {
+    width: 400px;
+    height: 400px;
   }
-} */
+
+  #canvas-main {
+    width: 400px;
+    height: 400px;
+    border-radius: 0 0 5px 5px;
+  }
+}
+
+@media only screen and (min-width: 501px) {
+  #canvas-section {
+    width: 500px;
+    height: 500px;
+  }
+
+  #canvas-main {
+    width: 500px;
+    height: 500px;
+    border-radius: 0 0 5px 5px;
+  }
+}
+
+@media only screen and (min-width: 551px) {
+  #canvas-section {
+    width: 550px;
+    height: 550px;
+  }
+
+  #canvas-main {
+    width: 550px;
+    height: 550px;
+    border-radius: 0 0 5px 5px;
+  }
+}
+*/
+
+@media only screen and (min-width: 701px) {
+  #wrapper {
+    max-width: 1000px;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #colors-section {
+    display: block;
+    width: 33%;
+  }
+
+  #display-panel-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 150px;
+    padding: 0.5rem;
+  }
+  #button-menu {
+    width: auto;
+    text-align: left;
+  }
+}
